fix content section on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,11 +72,11 @@ img {
 /* Main Section */
 .content {
     max-width: 90%;
-    width: 90%;
+    width: 80%;
+    max-height: 70%;
+    height: 70%;
     padding: 0px 10px;
     background-color: #fbeec1;
-    max-height: 80%;
-
     box-shadow: 0 0 5px 4px;
     display: flex;
     flex-direction: column;
@@ -86,6 +86,8 @@ img {
     text-align: center;
     margin: auto;
     margin-top: 5%;
+    display: flex;
+    padding: 20px;
 }
 
 .points,
@@ -112,7 +114,7 @@ img {
 
 /* edit question text */
 #questionText p {
-    font-size: 1.1em;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
@@ -170,7 +172,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .footer-content {
